<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="413dp"
        android:layout_height="59dp"
        android:layout_marginTop="309dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvResultados"
            android:layout_width="387dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="17dp"
            android:text="@string/tvResultados"
            android:textColor="#000000"
            android:textSize="34sp" />
    </FrameLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="395dp"
        android:layout_height="351dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn7"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/btnredondo"
                android:onClick="botonPulsado"
                android:text="@string/btn7" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="30dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/btnredondo"
                android:onClick="botonPulsado"
                android:text="@string/btn8" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/btnredondo"
                android:onClick="botonPulsado"
                android:text="@string/btn9" />

            <Button
                android:id="@+id/btnSumar"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/btnsignos"
                android:text="@string/btnSumar" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn4"
                android:layout_width="71dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/btnredondo"
                android:onClick="botonPulsado"
                android:text="@string/btn4" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="44dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/btnredondo"
                android:onClick="botonPulsado"
                android:text="@string/btn5" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="70dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/btnredondo"
                android:onClick="botonPulsado"
                android:text="@string/btn6" />

            <Button
                android:id="@+id/btnRestar"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/btnsignos"
                android:text="@string/btnRestar" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/btnredondo"
                android:onClick="botonPulsado"
                android:text="@string/btn1" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="39dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/btnredondo"
                android:onClick="botonPulsado"
                android:text="@string/btn2" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="64dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/btnredondo"
                android:onClick="botonPulsado"
                android:text="@string/btn3" />

            <Button
                android:id="@+id/btnMultiplicar"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/btnsignos"
                android:text="@string/btnMultiplicar" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn0"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/btnredondo"
                android:onClick="botonPulsado"
                android:text="@string/btn0" />

            <Button
                android:id="@+id/btnIgual"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/btnsignos"
                android:text="@string/btnIgual" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnDividir"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/btnsignos"
                android:text="@string/btnDividir" />

        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>